<resources>
    <string name="app_name">Office Works</string>
    <string name="app_name_beta">Office Works </string>
    <string name="trade_in_pro">Office Works</string>
    <string name="build_version">Build Version</string>
    <string name="Ok">OK</string>
    <string name="textNext">Next</string>
    <string name="textSkip">Skip</string>
    <string name="txtInqueue">In queue</string>
    <string name="loaderTxt">Loading</string>
    <string name="searchingTxt">Searching</string>
    <string name="txtConfirm">Confirm</string>
    <string name="txtContinue">Continue</string>
    <string name="Cancel">Cancel</string>
    <string name="Done">Done</string>
    <string name="txtAutomationPermission">Keep your Bluetooth and Wi-Fi turned on at all times to ensure correct results. Your device must also be connected to a Wi-Fi router/device before initiating the automated diagnostics.</string>
    <string name="Yes1">
         <![CDATA[<b>YES</b>]]></string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Submit">Submit</string>
    <string name="Reset">Reset</string>
    <string name="Back">Back</string>
    <string name="quit_app">Are you sure you want to exit Office Works?</string>
    <string name="verifying_device_trade">Verifying Device Tradability.</string>
    <string name="this_should">This should take less than 10 seconds</string>
    <string name="logout_app">Are you sure you want to Sign out?</string>
    <string name="ServerError">Something went wrong. Please check your Internet or try again later.</string>
    <string name="InternetError">There was an error processing your request. Please check your internet connection and try again.</string>
    <string name="InvalidLoginCreds">Please enter correct Email ID or Password</string>
    <string name="loaderMsg">Please wait while we are processing your request.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="txtInternetIssue">There was an error processing your request. Please check your internet connection and try again.</string>
    <string name="micinstructions1">Remove earphone.</string>
    <string name="micinstructions2">Maximize the volume.</string>
    <string name="micinstructions3">Noise may affect the result.</string>
    <string name="micinstructions4">Do not cover the mic.</string>
    <string name="micinstructions5"> Please allow microphone access.</string>
    <string name="txtDeviceInfo">Device \nInfo</string>
    <string name="txtAutomatedTest">Automated Tests</string>
    <string name="txtManualTest">Manual Tests</string>
    <string name="txtBuyBack">Trade - In \nMy Device</string>
    <string name="txtQRCode">Get Barcode</string>
    <string name="txtGetBarCode">Get Barcode</string>
    <string name="txtTabNamesHardware">Hardware</string>
    <string name="txtTabNamesSystem">System</string>
    <string name="txtTabNamesBattery">Battery</string>
    <string name="txtTabNamesNetwork">Network</string>
    <string name="txtTabNamesCamera">Camera</string>
    <string name="lowfrequency"><![CDATA[Low <br> Frequency]]> </string>
    <string name="midfrequency"><![CDATA[Mid <br> Frequency]]></string>
    <string name="highfrequency"><![CDATA[High <br> Frequency]]></string>
    <string name="shighfrequency"><![CDATA[Super High<br>Frequency]]></string>
    <string name="txtProcessor">Processor</string>
    <string name="txtHardware">Hardware</string>
    <string name="txtCPU">CPU</string>
    <string name="txtProcess">Process</string>
    <string name="txtCores">Cores</string>
    <string name="txtFrequencies">Frequencies</string>
    <string name="txtGovernor">Governor</string>
    <string name="txtVendor">Vendor</string>
    <string name="txtOpenGl">OpenGL</string>
    <string name="txtGraphics">Graphics</string>
    <string name="txtGPU">GPU</string>
    <string name="txtMax_frequency">Max frequency</string>
    <string name="txtResolution">Resolution</string>
    <string name="txtScreen_density">Screen density</string>
    <string name="txtScreen_size">Screen size</string>
    <string name="txtFrame_rate">Frame rate</string>
    <string name="txtMemory">Memory</string>
    <string name="txtRamSize">RAM Size </string>
    <string name="txtStorage">Storage</string>
    <string name="Capacity">Internal Storage</string>
    <string name="txtSystemStorage">System Storage</string>
    <string name="txtStorageAvailable">Available Internal Storage</string>
    <string name="txtIOScheduler">I/O Scheduler</string>
    <string name="txtReadAhead">Read ahead</string>
    <string name="txtSystem">System</string>
    <string name="Model">Model</string>
    <string name="txtCodename">Codename</string>
    <string name="Manufacturer">Manufacturer</string>
    <string name="SerialNumber">Serial number</string>
    <string name="txtBoot_loader">Boot loader</string>
    <string name="txtRadio">Radio</string>
    <string name="IMEI1">IMEI 1</string>
    <string name="IMEI2">IMEI 2</string>
    <string name="txtDevice_ID">Device ID</string>
    <string name="txtAutomation">Automated Test</string>
    <string name="OperatingSystem">Operating System</string>
    <string name="txtRootAccess">Root Access</string>
    <string name="txtBusy_box">Busy box</string>
    <string name="OperatingSystemVersion">Android Version</string>
    <string name="txtBuild">Build</string>
    <string name="txtSDK">SDK</string>
    <string name="txtKernel">Kernel</string>
    <string name="txtPermissionDenied">Not permitted by user</string>
    <string name="txtPermissionRoot">Device is Rooted</string>
    <string name="txtPermissionRootNot">Device is Not Rooted</string>
    <string name="txtUnavailable">Unavailable</string>
    <string name="txtStatus">Status</string>
    <string name="txtStatusCharging">Charging</string>
    <string name="txtStatusDischarging">Discharging</string>
    <string name="txtStatusFull">Full</string>
    <string name="txtStatusNot_Charging">Not Charging</string>
    <string name="txtLevel">Level</string>
    <string name="txtTemperature">Temperature</string>
    <string name="txtInformation">Information</string>
    <string name="txtTechnology">Technology</string>
    <string name="txtUnknown">Unknown</string>
    <string name="BatteryCondition">Health</string>
    <string name="txtHealthDead">Dead</string>
    <string name="txtHealthGood">Good</string>
    <string name="txtHealthOver_Voltage">Over Voltage</string>
    <string name="txtHealthOver_Heat">Over Heat</string>
    <string name="txtHealthFailure">Failure</string>
    <string name="txtVoltage">Voltage</string>
    <string name="txtVoltageV">V</string>
    <string name="txtCurrent">Current</string>
    <string name="txtCapacity">Capacity</string>
    <string name="txtPlugInTypeUSB">USB</string>
    <string name="txtPlugInTypeAC">AC</string>
    <string name="txtWifi">Wifi</string>
    <string name="txtNetwork">Network</string>
    <string name="net_working">Network working</string>
    <string name="txtBSSID">BSSID</string>
    <string name="txtDHCPServer">DHCP Server</string>
    <string name="txtGateway">Gateway</string>
    <string name="txtIPaddress">IP address</string>
    <string name="txtLinkSpeed">Link Speed</string>
    <string name="MACAddress">MAC address</string>
    <string name="txtSignalstrength">Signal strength</string>
    <string name="txtPublicIP">Public IP</string>
    <string name="txtMobile">Mobile</string>
    <string name="txtCallFunctionHeading">Diagnosing…</string>
    <string name="txtOperator">Operator</string>
    <string name="txtOperatorcode">Operator code</string>
    <string name="txtRoaming">Roaming</string>
    <string name="CDMAGSM">Phone type</string>
    <string name="txtNetworktype">Network type</string>
    <string name="txtWif">WIFI</string>
    <string name="txtNet">MOBILE</string>
    <string name="txtDbm"> dBm</string>
    <string name="welcome">Welcome</string>
    <string name="frank_mobile">Office Works Diagnostics App.</string>
    <string name="thank_you_download">Thank you for downloading Office Works Diagnostics App.</string>
    <string name="frank_wel_des">Thank you for downloading Office Works Diagnostics App.In order to assess device\'s health, app will perform a series of automated and interactive tests. Follow on-screen instructions to complete all tests and get accurate device valuation.\n\n Keep your Bluetooth and Wi-Fi turned on at all times to ensure correct results.
\n\nThe app may prompt you to grant certain permissions on the next screen to perform all tests successfully.
\n\nPress proceed to begin.</string>
    <string name="txtWiEnable">Wifi Enabled</string>
    <string name="txtMobEnable">Mobile Data Enabled</string>
    <string name="txtNotEnable">Not Connected To Internet</string>
    <string name="txtSimConnect">Connected</string>
    <string name="txtSimDisconnect">Disconnected</string>
    <string name="txtSimNetworkLock">Network Locked</string>
    <string name="txtSimPukRequired">PUK Required</string>
    <string name="txtSimPinRequired">Pin Required</string>
    <string name="txtSimUnkown">Unknown</string>
    <string name="txtSimNone">None</string>
    <string name="txtRoamEnable">Enabled</string>
    <string name="txtRoamDisabled">Disabled</string>
    <string name="txtRoamNotAvail">No Connection</string>
    <string name="txtTypeCDMA">CDMA</string>
    <string name="txtTypeGSM">GSM</string>
    <string name="proceed">Proceed</string>
    <string name="EarphoneJack">Jack</string>
    <string name="txtManualDeadPixelStartXML">Start</string>
    <string name="txtManualVolume_Btn">Volume Buttons</string>
    <string name="PowerButton">Power Button</string>
    <string name="ChargingPort">Charging Port</string>
    <string name="MultiTouch">Multi-Touch</string>
    <string name="ProximitySensor">Proximity Sensor</string>
    <string name="txtManualScreenTouchHelp">Run your fingertip over all the grey blocks on the screen until they turn white.</string>
    <string name="txtManualScreenTouchComplete">Congrats you screen touch is working fine.Now you can press back button and continue with the other examination.</string>
    <string name="HomeButton">Home</string>
    <string name="LightSensor">Light Sensor</string>
    <string name="Gyroscope">Gyroscope</string>
    <string name="textQRCodeHelp">Please scan this barcode into the MegaMMR enabled system to automatically retrieve the diagnostics data.</string>
    <string name="noInternet">There was an error processing your request. Please check your internet connection and try again.</string>
    <string name="textFooter">Powered by Fairworld IT Solutions</string>
    <string name="broadcast">Please click on the below icon to broadcast the data</string>
    <string name="textNote">Note:- Diagnostics data/bar code will be expired after 12 hours</string>
    <string name="textExpertDesc">You are now in expert mode and can perform the below listed tests randomly without following any sequence.</string>
    <string name="txtUDI">UDI</string>
    <string name="txtMethodName">Method Name</string>
    <string name="txtTimeStamp">Time Stamp</string>
    <string name="txtExceptionDetail">Exception Detail</string>
    <string name="txtStackTrace">Stack Trace</string>
    <string name="txtLogin">Login</string>
    <string name="txtChannelCode">Channel Code</string>
    <string name="txtStoreCode">Store Code</string>
    <string name="non_tradele">Your device is not tradable in our system.</string>
    <string name="non_tradele_desc">However, we have shared the details of your device with support team and they will contact you.</string>
    <string name="support_text">Meanwhile, you have any queries then please forward them to</string>
    <string name="txt_confirmation1">I want to share my Email-ID with Support team for further communication.</string>
</resources>