<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/disabledGray_opaque20"
    tools:context="com.officework.fragments.ShowExceptionDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtUDI"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txtViewUDIDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/alpha_White"
                android:singleLine="false"
                android:text="@string/txtUDI"
                android:textSize="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txtMethodName"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txtViewMethodNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/alpha_White"
                android:singleLine="false"
                android:text="@string/txtUDI"
                android:textSize="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txtTimeStamp"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txtViewTimeStampDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/alpha_White"
                android:singleLine="false"
                android:text="@string/txtUDI"
                android:textSize="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="false"
                android:text="@string/txtExceptionDetail"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txtViewExceptionDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/alpha_White"
                android:singleLine="false"
                android:text="@string/txtUDI"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txtStackTrace"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txtViewStackTrace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/alpha_White"
                android:singleLine="false"
                android:text="@string/txtUDI"
                android:textSize="16dp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
