<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.officework.fragments.CompleteOrderChannelLoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_linear_layout"
        android:padding="10dp">

        <EditText
            android:id="@+id/editTextChannelCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/txtChannelCode"
            android:inputType="text"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_linear_layout"
        android:padding="10dp">

        <EditText
            android:id="@+id/editTextStoreCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/txtStoreCode"
            android:inputType="text"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLoginChannel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_button_blue"
        android:gravity="center"
        android:text="@string/txtLogin"
        android:textColor="@color/white" />


</LinearLayout>
