<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtViewCompleteMsg"
        style="@style/Widget.TextViewHeadingNormal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/basic_padding"
        android:text="@string/txtManualScreenTouchComplete"
        android:visibility="gone" />

    <TextView
        android:id="@+id/countCanvasManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/desRL"
        android:layout_width="match_parent"

        android:layout_height="match_parent">


        <com.officework.customViews.IconView
            android:layout_width="135dp"
            android:layout_height="135dp"
            app:srcCompat="@drawable/ic_touch_screen_svg"
            android:layout_centerHorizontal="true"
            android:id="@+id/imgd"
            android:layout_marginTop="@dimen/_30dp"
            />

        <TextView

            android:layout_below="@+id/imgd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="@dimen/text_normal"
            android:text="@string/txtManualScreenTouchHelp"
            android:visibility="visible"
            android:layout_marginTop="@dimen/_30dp"
            android:id="@+id/desctxt"
            android:textColor="@color/Black"
            android:padding="16dp"
            />




        <com.officework.customViews.CustomButton
            android:layout_below="@+id/desctxt"
            android:layout_marginTop="@dimen/_30dp"

            android:id="@+id/starttouchTV"
            style="@style/Widget.TextViewHeadingNormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/app_blue_color"
            android:padding="15dp"
            android:text="@string/txtManualDeadPixelStartXML"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/about_us" />
    </RelativeLayout>


</RelativeLayout>